--- a/saml/advanced_settings.json
+++ b/saml/advanced_settings.json
@@ -1,13 +1,13 @@
 {
   "security": {
     "nameIdEncrypted": false,
-    "authnRequestsSigned": true,
-    "logoutRequestSigned": true,
-    "logoutResponseSigned": true,
-    "signMetadata": true,
-    "wantMessagesSigned": true,
-    "wantAssertionsSigned": true,
-    "wantAssertionsEncrypted": true,
+    "authnRequestsSigned": false,
+    "logoutRequestSigned": false,
+    "logoutResponseSigned": false,
+    "signMetadata": false,
+    "wantMessagesSigned": false,
+    "wantAssertionsSigned": false,
+    "wantAssertionsEncrypted": false,
     "wantNameId": true,
     "wantNameIdEncrypted": false
   }
